--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GasJo - Pelacak Lokasi</title>
+  <title>GasJo - Pelacak & Tarif</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; }
-    #map { height: 70vh; }
+    body { margin: 0; font-family: Arial, sans-serif; background: #f0f0f0; }
+    header { background: #1f2937; color: white; padding: 1rem; text-align: center; font-size: 1.3rem; }
+    #map { height: 65vh; }
     .controls {
       padding: 1rem;
       text-align: center;
-      background-color: #f4f4f4;
+      background: white;
     }
     button {
       padding: 10px 20px;
@@ -23,97 +24,96 @@
       font-weight: bold;
       cursor: pointer;
     }
-    .info { font-size: 1.1rem; margin-top: 0.5rem; }
+    #resultBox {
+      display: none;
+      background: white;
+      border: 2px solid #1d4ed8;
+      padding: 1rem;
+      margin: 1rem;
+      border-radius: 10px;
+      text-align: center;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
 
-  <header style="text-align:center; padding:1rem; background:#1f2937; color:white;">
-    GasJo - Pelacak Perjalanan
-  </header>
-
+  <header>GasJo - Lacak Perjalanan</header>
   <div id="map"></div>
 
   <div class="controls">
-    <button onclick="startTracking()">Mulai</button>
-    <button onclick="stopTracking()">Berhenti</button>
-    <div class="info" id="distance">Jarak: 0 meter</div>
+    <button onclick="mulaiTracking()">Mulai</button>
+    <button onclick="selesaiTracking()">Selesai</button>
+    <div id="info" class="info">Jarak: 0 km</div>
   </div>
+
+  <div id="resultBox"></div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    let map = L.map('map').setView([0, 0], 13);
-    let pathLine = null;
-    let watchId = null;
-    let positions = [];
-    let totalDistance = 0;
-
+    let map = L.map('map').setView([-6.2, 106.8], 13);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap'
+      attribution: '© OpenStreetMap'
     }).addTo(map);
 
-    function startTracking() {
-      if (!navigator.geolocation) {
-        alert("Browser tidak mendukung pelacakan lokasi.");
-        return;
-      }
+    let watchId;
+    let path = [];
+    let polyline = L.polyline([], { color: 'blue' }).addTo(map);
+    let totalDistance = 0;
 
-      positions = [];
-      totalDistance = 0;
-      updateDistance();
-
-      watchId = navigator.geolocation.watchPosition(
-        (pos) => {
-          const latlng = [pos.coords.latitude, pos.coords.longitude];
-          positions.push(latlng);
-
-          if (positions.length >= 2) {
-            const prev = positions[positions.length - 2];
-            const curr = positions[positions.length - 1];
-            totalDistance += getDistanceFromLatLonInMeters(prev[0], prev[1], curr[0], curr[1]);
-            updateDistance();
-          }
-
-          if (pathLine) map.removeLayer(pathLine);
-          pathLine = L.polyline(positions, { color: 'blue' }).addTo(map);
-
-          L.marker(latlng).addTo(map).bindPopup("Lokasi Anda").openPopup();
-          map.setView(latlng, 16);
-        },
-        (err) => {
-          alert("Gagal mendapatkan lokasi: " + err.message);
-        },
-        { enableHighAccuracy: true, maximumAge: 10000, timeout: 5000 }
-      );
-    }
-
-    function stopTracking() {
-      if (watchId) {
-        navigator.geolocation.clearWatch(watchId);
-        watchId = null;
-      }
-    }
-
-    function updateDistance() {
-      document.getElementById('distance').innerText = 'Jarak: ' + totalDistance.toFixed(2) + ' meter';
-    }
-
-    // Fungsi menghitung jarak antar 2 titik (dalam meter)
-    function getDistanceFromLatLonInMeters(lat1, lon1, lat2, lon2) {
-      const R = 6371000; // Radius bumi dalam meter
-      const dLat = toRad(lat2 - lat1);
-      const dLon = toRad(lon2 - lon1);
-      const a =
-        Math.sin(dLat / 2) * Math.sin(dLat / 2) +
-        Math.cos(toRad(lat1)) * Math.cos(toRad(lat2)) *
-        Math.sin(dLon / 2) * Math.sin(dLon / 2);
-      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+    function getDistance(lat1, lon1, lat2, lon2) {
+      const R = 6371; // km
+      const dLat = (lat2 - lat1) * Math.PI / 180;
+      const dLon = (lon2 - lon1) * Math.PI / 180;
+      const a = Math.sin(dLat/2) * Math.sin(dLat/2) +
+                Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) *
+                Math.sin(dLon/2) * Math.sin(dLon/2);
+      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
       return R * c;
     }
 
-    function toRad(deg) {
-      return deg * (Math.PI / 180);
+    function mulaiTracking() {
+      path = [];
+      totalDistance = 0;
+      polyline.setLatLngs([]);
+      if (!navigator.geolocation) {
+        alert("Geolocation tidak didukung.");
+        return;
+      }
+      watchId = navigator.geolocation.watchPosition(pos => {
+        const lat = pos.coords.latitude;
+        const lon = pos.coords.longitude;
+        const newPoint = [lat, lon];
+        path.push(newPoint);
+        polyline.addLatLng(newPoint);
+        map.setView(newPoint, 16);
+
+        if (path.length > 1) {
+          const last = path[path.length - 2];
+          totalDistance += getDistance(last[0], last[1], lat, lon);
+          document.getElementById("info").innerText = `Jarak: ${totalDistance.toFixed(2)} km`;
+        }
+      }, err => {
+        alert("Gagal mendapatkan lokasi: " + err.message);
+      }, {
+        enableHighAccuracy: true,
+        maximumAge: 0,
+        timeout: 10000
+      });
+    }
+
+    function selesaiTracking() {
+      if (watchId) navigator.geolocation.clearWatch(watchId);
+      const biaya = Math.round(totalDistance * 2500);
+      const box = document.getElementById("resultBox");
+      box.style.display = "block";
+      box.innerHTML = `
+        <h3>Perjalanan Selesai!</h3>
+        <p>Jarak tempuh: <b>${totalDistance.toFixed(2)} km</b></p>
+        <p>Total biaya: <b>Rp ${biaya.toLocaleString()}</b></p>
+      `;
     }
   </script>
+
 </body>
 </html>
